# unibet-bet-placer

./: .gitignore  README.md  digest.txt  pyproject.toml  techspec.md  test_browser_launch.py
app/: api.py  bet_placer.py  browser.py  main.py
