[tool.poetry]
name = "unibet-bet-placer"
version = "0.1.0"
description = ""
authors = ["Nick Martinovic <n.martinovic@criteo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.52.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
